cc: Update effect_tree backface visibility when transform is updated.

We should update effect_tree as well in UpdatePropertyTrees when an
animation cause a change in transform tree. Failing to update it may
cause draw_property_utils incorrectly skip layers.

This CL forces the update and added a related unit test.

BUG=610280
CQ_INCLUDE_TRYBOTS=tryserver.blink:linux_blink_rel

Review-Url: https://codereview.chromium.org/1994213002
Cr-Commit-Position: refs/heads/master@{#394846}

Former-commit-id: 59dd7daef0b5f11d6f8dd6dd5141967ab0deb0b4